# asrpy_gpu

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: _bench_utils.py  bench_calibrate.py  bench_eigh_strategies.py  bench_process.py
benchmarks/results/: README.md
config/: test_tolerances.yaml
docs/: equivalence.md  roadmap.md
docs/plans/: plan-20260430-asrpy_gpu-scaffold.md
src/asrpy_gpu/: __init__.py  _backend_numpy.py  _backend_torch.py  _device.py  _errors.py  _jacobi_metal.metal  _jacobi_metal.py  _jacobi_metal_block.metal  _jacobi_metal_block.py  _jacobi_torch.py  _lfilter_metal.metal  _lfilter_metal.py  asr.py
tests/: conftest.py  test_api.py  test_calibrate_robustness.py  test_determinism.py  test_equivalence.py  test_jacobi_metal.py  test_jacobi_metal_block.py  test_jacobi_torch.py
tests/reference/: asrpy_reference.py
