[project]
name = "asrpy_gpu"
version = "0.1.0"
description = "GPU-accelerated Artifact Subspace Reconstruction (ASR) for EEG, drop-in compatible with asrpy."
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.12"
authors = [
    { name = "Rémy Ramadour", email = "remy.ramadour@ppsp.team" },
]
keywords = ["EEG", "ASR", "artifact-subspace-reconstruction", "GPU", "MPS", "neuroscience"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "mne>=1.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
torch = [
    "torch>=2.2",
]
metal = [
    "pyobjc-core>=12.1",
    "pyobjc-framework-metal>=12.1",
]
gpu-audio = [
    "torchaudio>=2.11.0",
]

[project.urls]
Homepage = "https://github.com/ramdam17/asrpy_gpu"
Repository = "https://github.com/ramdam17/asrpy_gpu"
Issues = "https://github.com/ramdam17/asrpy_gpu/issues"
Reference-implementation = "https://github.com/DiGyt/asrpy"

[dependency-groups]
dev = [
    "asrpy",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "ipykernel>=6.0",
]

[tool.uv.sources]
asrpy = { git = "https://github.com/DiGyt/asrpy", rev = "main" }

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "NPY", # numpy-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: tests that take more than 5 seconds",
    "mps: tests that require Apple MPS",
    "cuda: tests that require NVIDIA CUDA",
]
